@@ -1,44 +1,41 @@
 package com.example.backend.service;
 
+import java.math.BigDecimal;
+import java.util.*;
+import java.util.stream.Collectors;
+
+import org.springframework.dao.DataAccessException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
+
 import com.example.backend.dto.request.*;
-import com.example.backend.dto.response.OrderResponse;
-import com.example.backend.dto.response.client.ClientOrderDetailResponse;
-import com.example.backend.dto.response.client.ClientOrderItemResponse;
-import com.example.backend.dto.response.client.ClientOrderResponse;
-import com.example.backend.dto.response.client.OrderPageResponse;
+import com.example.backend.dto.response.admin.AdminOrderResponse;
+import com.example.backend.dto.response.client.*;
 import com.example.backend.entity.*;
 import com.example.backend.enums.OrderStatus;
+import com.example.backend.enums.PaymentMethod;
 import com.example.backend.enums.PaymentStatus;
 import com.example.backend.enums.SerialStatus;
+import com.example.backend.exception.CustomException;
+import com.example.backend.exception.ErrorCode;
 import com.example.backend.mapper.OrderMapper;
 import com.example.backend.repository.AddressRepository;
 import com.example.backend.repository.OrderRepository;
 import com.example.backend.repository.ProductSerialRepository;
 import com.example.backend.repository.ProductVariantRepository;
-
 import com.example.backend.repository.projection.OrderStatusCountProjection;
 import com.example.backend.repository.projection.UserOrderProjection;
 import com.example.backend.utils.CodeGeneratorUtil;
+import com.example.backend.utils.SecurityUtils;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.dao.DataAccessException;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.security.access.AccessDeniedException;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.util.StringUtils;
-import tools.jackson.core.type.TypeReference;
-import tools.jackson.databind.JsonNode;
-import tools.jackson.databind.ObjectMapper;
-
-import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -49,7 +46,7 @@ public class OrderService {
     private final OrderMapper orderMapper;
     private final ProductVariantRepository variantRepository;
     private final CartService cartService;
-     private final AddressRepository addressRepository;
+    private final AddressRepository addressRepository;
     private final com.example.backend.service.VoucherService voucherService;
     private final com.example.backend.repository.VoucherRepository voucherRepository;
     private final GoshipService goshipService;
@@ -57,86 +54,60 @@ public class OrderService {
     private final ProductSerialRepository serialRepository;
     private final ObjectMapper objectMapper;
 
-    public List<OrderResponse> getAllOrders() {
+    @Transactional(readOnly = true)
+    public List<AdminOrderResponse> getAllOrders() {
         return orderRepository.findAll().stream()
-                .map(orderMapper::toResponse)
+                .map(orderMapper::toAdminOrderResponse)
                 .toList();
     }
 
-    @Transactional
-    public OrderResponse updateOrderStatus(Integer orderId, OrderStatusUpdateRequest request) {
-        Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy đơn hàng!"));
-
-        OrderStatus currentStatus = order.getOrderStatus();
-        OrderStatus newStatus = request.getOrderStatus();
-
-        // Chặn lỗi logic trạng thái
-        if (currentStatus == OrderStatus.COMPLETED) throw new IllegalStateException("Đơn hàng đã hoàn thành!");
-        if (currentStatus == OrderStatus.CANCELLED) throw new IllegalStateException("Đơn hàng đã bị hủy!");
-
-        order.setOrderStatus(newStatus);
-
-        if (newStatus == OrderStatus.SHIPPING) {
-            if (request.getTrackingNumber() != null) order.setTrackingNumber(request.getTrackingNumber());
-            if (request.getShippingCarrier() != null) order.setShippingCarrier(request.getShippingCarrier());
-        }
-
-        if (newStatus == OrderStatus.CANCELLED) {
-            if (request.getCancelReason() == null || request.getCancelReason().trim().isEmpty()) {
-                throw new IllegalArgumentException("Vui lòng nhập lý do hủy đơn hàng!");
-            }
-            order.setCancelReason(request.getCancelReason());
-        }
-
-        return orderMapper.toResponse(orderRepository.save(order));
-    }
-    public OrderPageResponse getMyOrders(Integer userId, String status, String keyword, int page, int size) {
+    @Transactional(readOnly = true)
+    public OrderPageResponse getMyOrders(String status, String keyword, int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
+        Integer userId = getCurrentUserId();
 
-        // 1. Gọi Database lấy danh sách đơn (Phân trang)
-        Page<UserOrderProjection> rawPage = orderRepository.findUserOrdersWithFilters(userId, status, keyword, pageable);
+        Page<UserOrderProjection> rawPage =
+                orderRepository.findUserOrdersWithFilters(userId, status, keyword, pageable);
 
-        // Parse JSON
-        List<ClientOrderResponse> content = rawPage.stream().map(projection -> {
-            List<Map<String, Object>> parsedItems = new ArrayList<>();
-            try {
-                if (projection.getItemsJson() != null && !projection.getItemsJson().isEmpty()) {
-                    parsedItems = objectMapper.readValue(projection.getItemsJson(), new TypeReference<>() {});
-                }
-            } catch (Exception e) {}
+        List<ClientOrderResponse> content = rawPage.stream()
+                .map(projection -> {
+                    List<ClientOrderResponse.OrderItem> parsedItems = new ArrayList<>();
+                    try {
+                        if (projection.getItemsJson() != null
+                                && !projection.getItemsJson().isEmpty()) {
+                            parsedItems = objectMapper.readValue(projection.getItemsJson(), new TypeReference<>() {});
+                        }
+                    } catch (Exception e) {
+                        log.error("Lỗi parse JSON items cho đơn hàng ID {}: {}", projection.getId(), e.getMessage());
+                    }
 
-            return ClientOrderResponse.builder()
-                    .id(projection.getId())
-                    .code(projection.getCode())
-                    .createdAt(projection.getCreatedAt())
-                    .orderStatus(projection.getOrderStatus())
-                    .finalAmount(projection.getFinalAmount())
-                    .paymentMethod(projection.getPaymentMethod())
-                    .paymentStatus(projection.getPaymentStatus())
-                    .fullShippingAddress(projection.getFullShippingAddress())
-                    .items(parsedItems)
-                    .build();
-        }).collect(Collectors.toList());
-
-        // 2. Gọi Database lấy bộ đếm trạng thái
+                    return ClientOrderResponse.builder()
+                            .id(projection.getId())
+                            .code(projection.getCode())
+                            .createdAt(projection.getCreatedAt())
+                            .orderStatus(projection.getOrderStatus())
+                            .finalAmount(projection.getFinalAmount())
+                            .paymentMethod(projection.getPaymentMethod())
+                            .paymentStatus(projection.getPaymentStatus())
+                            .fullShippingAddress(projection.getFullShippingAddress())
+                            .items(parsedItems)
+                            .build();
+                })
+                .toList();
         List<OrderStatusCountProjection> counts = orderRepository.countOrdersByStatusForUser(userId);
 
-        // Khởi tạo Map với giá trị 0 cho TẤT CẢ các trạng thái (để Frontend không bị lỗi undefinied)
         Map<String, Long> statusSummary = new HashMap<>();
         for (OrderStatus os : OrderStatus.values()) {
             statusSummary.put(os.name(), 0L);
         }
 
-        // Ghi đè số lượng thật từ DB và tính tổng "ALL"
         long totalAll = 0;
         for (OrderStatusCountProjection c : counts) {
             statusSummary.put(c.getStatus(), c.getCount());
             totalAll += c.getCount();
         }
-        statusSummary.put("ALL", totalAll); // Thêm tab TẤT CẢ
+        statusSummary.put("ALL", totalAll);
 
-        // 3. Đóng gói và trả về
         return OrderPageResponse.builder()
                 .statusSummary(statusSummary)
                 .content(content)
@@ -148,86 +119,331 @@ public class OrderService {
     }
 
     @Transactional(readOnly = true)
-    public ClientOrderDetailResponse getOrderDetailForClient(Integer userId, Integer orderId) {
+    public ClientOrderDetailResponse getOrderDetailForClient(Integer orderId) {
 
-        // 1. Tìm đơn hàng
-        Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy đơn hàng!"));
+        Integer userId = getCurrentUserId();
+        Order order = getOrderByIdOrThrow(orderId);
 
-        // 2. CHỐT CHẶN BẢO MẬT QUAN TRỌNG NHẤT: Kiểm tra chính chủ
         if (!order.getUser().getId().equals(userId)) {
-            throw new AccessDeniedException("Bạn không có quyền xem đơn hàng này!");
+            throw new CustomException(ErrorCode.AUTH_UNAUTHORIZED_ACTION);
         }
 
-        // 3. Tìm trạng thái thanh toán & phương thức mới nhất
-        String paymentMethod = null;
-        String paymentStatus = null;
-        if (order.getPayments() != null && !order.getPayments().isEmpty()) {
-            Payment latestPayment = order.getPayments().get(order.getPayments().size() - 1);
-            paymentMethod = latestPayment.getMethod() != null ? latestPayment.getMethod().name() : null;
-            paymentStatus = latestPayment.getStatus() != null ? latestPayment.getStatus().name() : null;
-        }
-
-        // 4. Nối địa chỉ
-        String fullAddress = String.format("%s, %s, %s, %s",
-                order.getShippingAddress(), order.getShippingWard(),
-                order.getShippingDistrict(), order.getShippingCity());
-
-        // 5. Map mảng Items (Che giấu SKU)
-        List<ClientOrderItemResponse> itemResponses = order.getOrderItems().stream()
-                .map(item -> ClientOrderItemResponse.builder()
-                        .productId(item.getProductVariant() != null ? item.getProductVariant().getProduct().getId() : null)
-                        .variantId(item.getProductVariant() != null ? item.getProductVariant().getId() : null)
-                        .productName(item.getProductName())
-                        .variantInfo(String.format("%s %s %s",
-                                item.getOption1Value() != null ? item.getOption1Value() : "",
-                                item.getOption2Value() != null ? item.getOption2Value() : "",
-                                item.getOption3Value() != null ? item.getOption3Value() : "").trim())
-                        .thumbnail(item.getThumbnail())
-                        .price(item.getPrice())
-                        .quantity(item.getQuantity())
-                        .totalPrice(item.getTotalPrice())
-                        .build())
-                .collect(Collectors.toList());
-
-        // 6. Build DTO trả về
-        return ClientOrderDetailResponse.builder()
-                .id(order.getId())
-                .code(order.getCode())
-                .orderStatus(order.getOrderStatus().name())
-                .createdAt(order.getCreatedAt())
-                .note(order.getNote())
-                .cancelReason(order.getCancelReason())
-                .customerName(order.getCustomerName())
-                .customerPhone(order.getCustomerPhone())
-                .fullShippingAddress(fullAddress)
-                .shippingCarrier(order.getShippingCarrier())
-                .trackingNumber(order.getTrackingNumber())
-                .paymentMethod(paymentMethod)
-                .paymentStatus(paymentStatus)
-                .totalAmount(order.getTotalAmount())
-                .shippingFee(order.getShippingFee())
-                .discountAmount(order.getDiscountAmount())
-                .finalAmount(order.getFinalAmount())
-                .isVatRequired(order.getIsVatRequired())
-                .companyName(order.getCompanyName())
-                .taxCode(order.getTaxCode())
-                .companyAddress(order.getCompanyAddress())
-                .items(itemResponses)
-                .build();
+        return orderMapper.toClientOrderDetailResponse(order);
     }
 
+    @Transactional
+    public void cancelOrderByUser(Integer userId, String orderCode, String cancelReason) {
+        Order order = getOrderByCodeOrThrow(orderCode);
+
+        if (order.getUser() == null || !order.getUser().getId().equals(userId)) {
+            throw new CustomException(ErrorCode.AUTH_UNAUTHORIZED_ACTION);
+        }
+
+        validateCancellableStatus(order);
+
+        validateCancelReason(cancelReason);
+
+        order.setOrderStatus(OrderStatus.CANCELLED);
+        order.setCancelReason("Khách hàng tự hủy: " + cancelReason);
+    }
+
+    @Transactional
+    public void cancelOrderByAdmin(String code, String reason) {
+        Order order = getOrderByCodeOrThrow(code);
+
+        validateCancelReason(reason);
+
+        validateCancellableStatus(order);
+
+        order.setOrderStatus(OrderStatus.CANCELLED);
+        order.setCancelReason(reason);
+    }
+
+    @Transactional
+    public AdminOrderResponse confirmOrder(Integer orderId) {
+        Order order = getOrderByIdOrThrow(orderId);
+
+        if (!order.getOrderStatus().canConfirm()) {
+            throw new CustomException(
+                    ErrorCode.ORDER_INVALID_STATUS, "Chỉ có thể xác nhận đơn hàng đang ở trạng thái Chờ xác nhận!");
+        }
+
+        order.setOrderStatus(OrderStatus.CONFIRMED);
+        return orderMapper.toAdminOrderResponse(order);
+    }
 
     @Transactional(rollbackFor = Exception.class)
-    public OrderResponse checkout(Integer userId, String sessionId, OrderRequest request) {
+    public AdminOrderResponse packAndReadyToShip(Integer orderId, PackOrderRequest request) {
 
-        // =========================================================
-        // 1. ÁNH XẠ CƠ BẢN & KHỞI TẠO ORDER
-        // =========================================================
-        Order order = orderMapper.toEntity(request);
+        Order order = getOrderByIdOrThrow(orderId);
+
+        if (!order.getOrderStatus().equals(OrderStatus.CONFIRMED)) {
+            throw new CustomException(
+                    ErrorCode.ORDER_INVALID_STATUS, "Đơn hàng phải ở trạng thái ĐÃ XÁC NHẬN mới được đóng gói!");
+        }
+
+        processProductSerials(order, request.getSerials());
+
+        Map<String, Object> shipmentData = buildGoshipShipmentData(order);
+
+        Map<String, Object> goshipResponse;
+        try {
+            goshipResponse = goshipService.createShipment(shipmentData);
+        } catch (Exception e) {
+            throw new CustomException(ErrorCode.GOSHIP_API_ERROR, e.getMessage());
+        }
+
+        if (goshipResponse == null || !"success".equals(goshipResponse.get("status"))) {
+            throw new CustomException(ErrorCode.GOSHIP_REJECTED);
+        }
+
+        String newShipmentId = String.valueOf(goshipResponse.get("id"));
+        Object trackingObj = goshipResponse.get("tracking_number");
+
+        String trackingNumber = (trackingObj != null
+                        && !"NULL".equalsIgnoreCase(String.valueOf(trackingObj).trim())
+                        && StringUtils.hasText(String.valueOf(trackingObj)))
+                ? String.valueOf(trackingObj)
+                : newShipmentId;
+
+        order.setOrderStatus(OrderStatus.READY_TO_SHIP);
+        order.setTrackingNumber(trackingNumber);
+        order.setGoshipShipmentId(newShipmentId);
+
+        try {
+            return orderMapper.toAdminOrderResponse(orderRepository.save(order));
+        } catch (DataAccessException e) {
+            log.error("Lỗi lưu DB, đang gọi Goship để hủy đơn rác có ID: {} ", newShipmentId);
+            goshipService.cancelShipment(newShipmentId);
+            throw new CustomException(ErrorCode.DB_SYNC_ERROR_ROLLBACK);
+        }
+    }
+
+    @Transactional
+    public void handleGoshipWebhook(GoshipWebhookRequest request) {
+
+        Order order = getOrderByCodeOrThrow(request.getOrderCode());
+
+        if (StringUtils.hasText(request.getTrackingNumber())
+                && !request.getTrackingNumber().equals(order.getTrackingNumber())) {
+            order.setTrackingNumber(request.getTrackingNumber());
+        }
+
+        OrderStatus currentStatus = order.getOrderStatus();
+
+        if (currentStatus == OrderStatus.COMPLETED
+                || currentStatus == OrderStatus.CANCELLED
+                || currentStatus == OrderStatus.RETURNED) {
+
+            log.warn("Đơn {} đã chốt trạng thái {}, bỏ qua webhook {}",
+                    order.getCode(),
+                    currentStatus,
+                    request.getGoshipStatusCode());
+            return;
+        }
+
+        Payment payment = order.getPayments().stream()
+                .findFirst()
+                .orElseThrow(() -> new CustomException(ErrorCode.PAYMENT_NOT_FOUND));
+
+        boolean isCOD = payment.getMethod() == PaymentMethod.COD;
+
+        switch (request.getGoshipStatusCode()) {
+
+            case 902, 903, 904, 916, 918, 919 -> {
+                order.setOrderStatus(OrderStatus.SHIPPING);
+            }
+
+            case 905 -> {
+                order.setOrderStatus(OrderStatus.DELIVERED);
+            }
+
+            case 906, 907 -> {
+                String oldNote = StringUtils.hasText(order.getNote()) ? order.getNote() + " | " : "";
+                order.setNote(oldNote + "[Goship]: " + request.getNote());
+            }
+
+            case 908 -> {
+                order.setOrderStatus(OrderStatus.RETURNED);
+                order.setCancelReason("Hoàn hàng: " + request.getNote());
+
+                if (isCOD) {
+                    payment.setStatus(PaymentStatus.FAILED);
+                } else {
+                    payment.setStatus(PaymentStatus.REFUNDED);
+                }
+
+                restoreStockForOrder(order);
+            }
+
+            case 913 -> {
+                order.setOrderStatus(OrderStatus.COMPLETED);
+                if (isCOD) {
+                    payment.setStatus(PaymentStatus.COMPLETED);
+                }
+            }
+
+
+            case 914 -> {
+                order.setOrderStatus(OrderStatus.CANCELLED);
+                order.setCancelReason("Vận chuyển hủy: " + request.getNote());
+
+                if (isCOD) {
+                    payment.setStatus(PaymentStatus.FAILED);
+                } else {
+                    payment.setStatus(PaymentStatus.REFUNDED);
+                }
+
+                restoreStockForOrder(order);
+            }
+
+            default -> log.info("Chưa xử lý status Goship: {}", request.getGoshipStatusCode());
+        }
+
+        orderRepository.save(order);
+    }
+
+    @Transactional(readOnly = true)
+    public List<AdminOrderResponse> getOrdersForPrint(List<String> orderCodes) {
+        List<Order> orders = orderRepository.findByCodeIn(orderCodes);
+        if (orders.isEmpty()) {
+            throw new CustomException(ErrorCode.ORDER_EMPTY_PRINT_LIST);
+        }
+        return orders.stream().map(orderMapper::toAdminOrderResponse).toList();
+    }
+
+    private Map<String, Object> buildGoshipShipmentData(Order order) {
+        Map<String, Object> shipmentData = new HashMap<>();
+        shipmentData.put("rate_id", order.getGoshipShipmentId());
+        shipmentData.put("name", order.getCustomerName());
+        shipmentData.put("phone", order.getCustomerPhone());
+        shipmentData.put("address_detail", order.getShippingAddress());
+        shipmentData.put("city", order.getShippingCityCode());
+        shipmentData.put("district", order.getShippingDistrictCode());
+        shipmentData.put("ward", order.getShippingWardCode());
+
+        boolean isAlreadyPaid = order.getPayments().stream().anyMatch(p -> p.getStatus() == PaymentStatus.COMPLETED);
+        shipmentData.put("cod", isAlreadyPaid ? 0 : order.getFinalAmount().intValue());
+        shipmentData.put("amount", order.getFinalAmount().intValue());
+        return shipmentData;
+    }
+
+    private void restoreStockForOrder(Order order) {
+        log.info("Tiến hành hoàn lại tồn kho cho đơn hàng: {}", order.getCode());
+
+        for (OrderItem item : order.getOrderItems()) {
+
+            if (item.getProductVariant() != null) {
+                int updated = variantRepository.incrementStockSafely(
+                        item.getProductVariant().getId(), item.getQuantity());
+                if (updated == 0) {
+                    throw new CustomException(ErrorCode.VARIANT_NOT_FOUND);
+                }
+            }
+        }
+    }
+
+    private Integer getCurrentUserId() {
+        try {
+            return SecurityUtils.getCurrentUserId();
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    private Order getOrderByIdOrThrow(Integer id) {
+        return orderRepository.findById(id).orElseThrow(() -> new CustomException(ErrorCode.ORDER_NOT_FOUND));
+    }
+
+    private Order getOrderByCodeOrThrow(String code) {
+        return orderRepository.findByCode(code).orElseThrow(() -> new CustomException(ErrorCode.ORDER_NOT_FOUND));
+    }
+
+    private void validateCancelReason(String reason) {
+        if (reason == null || reason.isBlank()) {
+            throw new CustomException(ErrorCode.ORDER_EMPTY_CANCEL_REASON);
+        }
+    }
+
+    private void processProductSerials(Order order, Map<Integer, List<String>> scannedSerialsMap) {
+        List<ProductSerial> serialsToUpdate = new ArrayList<>();
+
+        for (OrderItem item : order.getOrderItems()) {
+            if (item.getProductVariant() == null) {
+                throw new CustomException(
+                        ErrorCode.PRODUCT_NOT_FOUND, "Sản phẩm [" + item.getProductName() + "] không còn trong kho!");
+            }
+
+            Integer variantId = item.getProductVariant().getId();
+            List<String> providedSerials = (scannedSerialsMap != null) ? scannedSerialsMap.get(variantId) : null;
+
+            validateSerialInput(item, providedSerials);
+
+            if (providedSerials != null && !providedSerials.isEmpty()) {
+                serialsToUpdate.addAll(processSerials(providedSerials, variantId, order.getId()));
+            }
+        }
+        if (!serialsToUpdate.isEmpty()) {
+            serialRepository.saveAll(serialsToUpdate);
+        }
+    }
+
+    private void validateSerialInput(OrderItem item, List<String> providedSerials) {
+        boolean isSerialRequired = Boolean.TRUE.equals(item.getProductVariant().getIsSerialRequired());
+
+        if (isSerialRequired) {
+            if (providedSerials == null || providedSerials.size() != item.getQuantity()) {
+                throw new CustomException(
+                        ErrorCode.SERIAL_INVALID_QUANTITY,
+                        "Vui lòng quét đúng " + item.getQuantity() + " mã Serial cho " + item.getProductName());
+            }
+            return;
+        }
+
+        if (providedSerials != null && !providedSerials.isEmpty()) {
+            throw new CustomException(ErrorCode.SERIAL_NOT_MANAGED, item.getProductName());
+        }
+    }
+
+    private List<ProductSerial> processSerials(List<String> serialNumbers, Integer variantId, Integer orderId) {
+        List<ProductSerial> result = new ArrayList<>();
+
+        for (String rawSerial : serialNumbers) {
+
+            String serialNumber = rawSerial.toUpperCase();
+
+            ProductSerial ps = serialRepository
+                    .findBySerialNumber(serialNumber)
+                    .orElseThrow(() -> new CustomException(ErrorCode.SERIAL_UNAVAILABLE));
+
+            if (!ps.getStatus().equals(SerialStatus.AVAILABLE)
+                    || !ps.getProductVariantId().equals(variantId)) {
+                throw new CustomException(ErrorCode.SERIAL_MISMATCH, "Mã: " + serialNumber);
+            }
+
+            ps.setStatus(SerialStatus.SOLD);
+            ps.setOrderId(orderId);
+            result.add(ps);
+        }
+        return result;
+    }
+
+    private void validateCancellableStatus(Order order) {
+        if (!order.getOrderStatus().equals(OrderStatus.PENDING)
+                && !order.getOrderStatus().equals(OrderStatus.CONFIRMED)) {
+            throw new CustomException(
+                    ErrorCode.ORDER_INVALID_STATUS, "Chỉ có thể hủy đơn hàng khi đang chờ xác nhận hoặc chờ lấy hàng!");
+        }
+    }
+
+    @Transactional(rollbackFor = Exception.class)
+    public OrderCheckoutResponse checkout(String sessionId, OrderRequest request) {
+        Integer userId = getCurrentUserId();
+
+        Order order = orderMapper.toOrder(request);
         order.setCode(CodeGeneratorUtil.generateOrderCode());
         order.setOrderStatus(OrderStatus.PENDING);
-        order.setOrderItems(new ArrayList<>()); // Đảm bảo list không bị null
+        order.setOrderItems(new ArrayList<>());
 
         if (userId != null) {
             User userRef = new User();
@@ -235,69 +451,83 @@ public class OrderService {
             order.setUser(userRef);
         }
 
-        // =========================================================
-        // 2. [BẢO MẬT] XỬ LÝ ĐỊA CHỈ (OVERWRITE TỪ DB NẾU LÀ USER)
-        // =========================================================
-        if (request.getAddressId() != null) {
-            Address address = addressRepository.findById(request.getAddressId())
-                    .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy địa chỉ giao hàng!"));
+        processShippingAddress(order, userId, request.getAddressId());
 
-            if (userId == null || !address.getUser().getId().equals(userId)) {
-                throw new IllegalStateException("Hành vi đáng ngờ: Bạn không có quyền sử dụng địa chỉ này!");
-            }
+        List<Integer> cartItemIdsToRemove = new ArrayList<>();
+        BigDecimal totalAmount = processItemsAndCalculateTotal(order, request.getItems(), cartItemIdsToRemove);
 
-            // Ghi đè thông tin từ DB để ngăn ngừa gian lận sửa thông tin qua F12
-            order.setCustomerName(address.getFullName());
-            order.setCustomerPhone(address.getPhone());
-            order.setShippingAddress(address.getAddressDetail());
-            order.setShippingWard(address.getWard());
-            order.setShippingDistrict(address.getDistrict());
-            order.setShippingCity(address.getCity());
-            order.setShippingWardCode(address.getWardCode());
-            order.setShippingDistrictCode(address.getDistrictCode());
-            order.setShippingCityCode(address.getCityCode());
+        BigDecimal shippingFee = processShippingFee(order, request, totalAmount);
+
+        BigDecimal discountAmount = processVoucher(order, request.getVoucherCode(), totalAmount);
+
+        finalizeOrderAndPayment(order, request.getPaymentMethod(), totalAmount, shippingFee, discountAmount);
+
+        log.info("dl: {}", cartItemIdsToRemove);
+
+        if (!cartItemIdsToRemove.isEmpty()) {
+            cartService.removeCartItemsBatch(userId, sessionId, cartItemIdsToRemove);
         }
 
-        // =========================================================
-        // 3. XỬ LÝ SẢN PHẨM, KHO VÀ [FLASH SALE] (TỐI ƯU N+1)
-        // =========================================================
+        return orderMapper.toOrderCheckoutResponse(orderRepository.save(order));
+    }
+
+    private void processShippingAddress(Order order, Integer userId, Integer addressId) {
+        if (addressId == null) return;
+
+        Address address = addressRepository
+                .findById(addressId)
+                .orElseThrow(() -> new CustomException(ErrorCode.ADDRESS_NOT_FOUND));
+
+        if (!Objects.equals(address.getUser().getId(), userId)) {
+            throw new CustomException(ErrorCode.ADDRESS_NOT_OWNED_BY_USER);
+        }
+
+        order.setCustomerName(address.getFullName());
+        order.setCustomerPhone(address.getPhone());
+        order.setShippingAddress(address.getAddressDetail());
+        order.setShippingWard(address.getWard());
+        order.setShippingDistrict(address.getDistrict());
+        order.setShippingCity(address.getCity());
+        order.setShippingWardCode(address.getWardCode());
+        order.setShippingDistrictCode(address.getDistrictCode());
+        order.setShippingCityCode(address.getCityCode());
+    }
+
+    private BigDecimal processItemsAndCalculateTotal(
+            Order order, List<OrderRequest.CheckoutItemRequest> itemsReq, List<Integer> cartItemIdsToRemove) {
         BigDecimal totalAmount = BigDecimal.ZERO;
 
-        // Lấy toàn bộ variant_id trong đơn hàng
-        List<Integer> variantIds = request.getItems().stream()
+        List<Integer> variantIds = itemsReq.stream()
                 .map(OrderRequest.CheckoutItemRequest::getVariantId)
                 .toList();
 
-        // Query DB 1 lần duy nhất để lấy tất cả Flash Sale đang chạy cho các sản phẩm này
+        Map<Integer, ProductVariant> variantMap = variantRepository.findAllById(variantIds).stream()
+                .collect(Collectors.toMap(ProductVariant::getId, v -> v));
+
         Map<Integer, FlashSale> activeSalesMap = flashSaleService.getActiveFlashSalesForVariants(variantIds);
 
-        for (OrderRequest.CheckoutItemRequest itemReq : request.getItems()) {
-            ProductVariant variant = variantRepository.findById(itemReq.getVariantId())
-                    .orElseThrow(() -> new IllegalArgumentException("Sản phẩm không tồn tại!"));
-
-            // [ĐỒNG BỘ KHO THƯỜNG]: Dùng câu query UPDATE nguyên tử để trừ kho
-            int updatedRows = variantRepository.decrementStockSafely(variant.getId(), itemReq.getQuantity());
-            if (updatedRows == 0) {
-                throw new IllegalStateException("Xin lỗi, sản phẩm " + variant.getSku() + " vừa hết hàng hoặc không đủ số lượng!");
+        for (OrderRequest.CheckoutItemRequest itemReq : itemsReq) {
+            ProductVariant variant = variantMap.get(itemReq.getVariantId());
+            if (variant == null) {
+                throw new CustomException(ErrorCode.PRODUCT_NOT_FOUND);
             }
 
-            // [XỬ LÝ GIÁ]: Ưu tiên giá Flash Sale, nếu không có thì lấy giá gốc
+            int updatedRows = variantRepository.decrementStockSafely(variant.getId(), itemReq.getQuantity());
+            if (updatedRows == 0) {
+                throw new CustomException(ErrorCode.PRODUCT_OUT_OF_STOCK, variant.getSku());
+            }
+
             BigDecimal itemPrice = variant.getPrice();
             FlashSale activeSale = activeSalesMap.get(variant.getId());
 
             if (activeSale != null) {
-                // Đè giá Flash Sale
                 itemPrice = activeSale.getFlashSalePrice();
-
-                // Trừ số lượng suất Flash Sale an toàn
                 flashSaleService.deductFlashSaleStockSafely(activeSale.getId(), itemReq.getQuantity());
             }
 
-            // Tính tiền cho món hàng này và cộng vào tổng đơn
             BigDecimal itemTotalPrice = itemPrice.multiply(BigDecimal.valueOf(itemReq.getQuantity()));
             totalAmount = totalAmount.add(itemTotalPrice);
 
-            // Tạo dòng OrderItem
             OrderItem orderItem = OrderItem.builder()
                     .order(order)
                     .productVariant(variant)
@@ -316,395 +546,95 @@ public class OrderService {
 
             order.getOrderItems().add(orderItem);
 
-            // Dọn dẹp giỏ hàng
             if (itemReq.getCartItemId() != null) {
-                cartService.removeCartItemById(userId, sessionId, itemReq.getCartItemId());
+                cartItemIdsToRemove.add(itemReq.getCartItemId());
             }
         }
+        return totalAmount;
+    }
 
-        // =========================================================
-        // 4. GỌI API GOSHIP ĐỂ TÍNH LẠI PHÍ SHIP (ZERO-TRUST)
-        // =========================================================
-        BigDecimal realShippingFee = BigDecimal.ZERO;
-
-        // Tổng cân nặng tạm tính (Ví dụ: 200 gram / sản phẩm)
-        int totalWeight = request.getItems().stream().mapToInt(OrderRequest.CheckoutItemRequest::getQuantity).sum() * 200;
+    private BigDecimal processShippingFee(Order order, OrderRequest request, BigDecimal totalAmount) {
+        int totalWeight = request.getItems().stream()
+                        .mapToInt(OrderRequest.CheckoutItemRequest::getQuantity)
+                        .sum()
+                * 200;
 
         GoshipDto.FeeRequest feeRequest = GoshipDto.FeeRequest.builder()
                 .city(order.getShippingCityCode())
                 .district(order.getShippingDistrictCode())
                 .ward(order.getShippingWardCode())
                 .weight(totalWeight)
-                .amount(totalAmount.intValue()) // Tiền hàng để tính bảo hiểm
+                .amount(totalAmount.intValue())
                 .cod(0)
                 .build();
 
         try {
-            List<JsonNode> rates = goshipService.calculateShippingFee(feeRequest);
-
-            // Tìm đúng gói cước (rate_id) mà khách đã chọn trên Frontend gửi xuống
-            // VD gửi xuống: goshipShipmentId: "MTNfN18xNjEx"
+            List<Map<String, Object>> rates = goshipService.calculateShippingFee(feeRequest);
             String requestedRateId = request.getGoshipShipmentId();
 
-            for (JsonNode rate : rates) {
-                if (rate.path("id").asText().equals(requestedRateId)) {
-                    realShippingFee = new BigDecimal(rate.path("total_fee").asText());
-                    order.setShippingCarrier(rate.path("carrier_name").asText()); // VD: "Giao Hàng Tiết Kiệm"
-                    break;
+            for (Map<String, Object> rate : rates) {
+                String currentRateId = String.valueOf(rate.get("id"));
+
+                if (currentRateId.equals(requestedRateId)) {
+                    order.setShippingCarrier(String.valueOf(rate.get("carrier_name")));
+                    order.setGoshipShipmentId(requestedRateId);
+                    return new BigDecimal(String.valueOf(rate.get("total_fee")));
                 }
             }
 
-            // Nếu không tìm thấy mã khớp, lấy gói cước đầu tiên mặc định
-            if (realShippingFee.compareTo(BigDecimal.ZERO) == 0 && !rates.isEmpty()) {
-                JsonNode defaultRate = rates.get(0);
-                realShippingFee = new BigDecimal(defaultRate.path("total_fee").asText());
-                order.setShippingCarrier(defaultRate.path("carrier_name").asText());
-                requestedRateId = defaultRate.path("id").asText();
+            if (!rates.isEmpty()) {
+                Map<String, Object> defaultRate = rates.getFirst();
+
+                order.setShippingCarrier(String.valueOf(defaultRate.get("carrier_name")));
+                order.setGoshipShipmentId(String.valueOf(defaultRate.get("id")));
+                return new BigDecimal(String.valueOf(defaultRate.get("total_fee")));
             }
-
-            order.setGoshipShipmentId(requestedRateId); // Lưu lại rate_id để sau này Admin tạo vận đơn
-
         } catch (Exception e) {
-            // Có thể gán phí mặc định nếu API Goship lỗi
-            realShippingFee = new BigDecimal("30000");
+            log.warn(
+                    "Lỗi gọi API Goship tính phí vận chuyển, fallback về phí mặc định. OrderCode: {}", order.getCode());
         }
 
-        // =========================================================
-        // 5. ÁP MÃ VOUCHER
-        // =========================================================
-        BigDecimal discountAmount = BigDecimal.ZERO;
+        order.setShippingCarrier("Mặc định");
+        return new BigDecimal("30000");
+    }
 
-        if (request.getVoucherCode() != null && !request.getVoucherCode().trim().isEmpty()) {
-            String code = request.getVoucherCode().trim().toUpperCase();
+    private BigDecimal processVoucher(Order order, String voucherCode, BigDecimal totalAmount) {
+        if (!StringUtils.hasText(voucherCode)) return BigDecimal.ZERO;
 
-            // VoucherService sẽ tự kiểm tra đơn tối thiểu, hết hạn... dựa trên totalAmount
-            discountAmount = voucherService.calculateDiscountAmount(code, totalAmount);
+        String code = voucherCode.trim().toUpperCase();
+        BigDecimal discountAmount = voucherService.calculateDiscountAmount(code, totalAmount);
 
-            Voucher appliedVoucher = voucherRepository.findByCodeAndDeletedAtIsNull(code)
-                    .orElseThrow(() -> new IllegalArgumentException("Mã giảm giá không hợp lệ!"));
-            order.setVoucher(appliedVoucher);
+        Voucher appliedVoucher = voucherRepository
+                .findByCodeAndDeletedAtIsNull(code)
+                .orElseThrow(() -> new CustomException(ErrorCode.VOUCHER_INVALID));
 
-            // Trừ lượt sử dụng (Update vào DB)
-            voucherService.incrementUsedCount(code);
-        }
+        order.setVoucher(appliedVoucher);
+        voucherService.incrementUsedCount(code);
 
-        // =========================================================
-        // 6. TỔNG KẾT, LƯU ORDER & PAYMENT
-        // =========================================================
-        BigDecimal finalAmount = totalAmount.subtract(discountAmount).add(realShippingFee);
-        finalAmount = finalAmount.max(BigDecimal.ZERO); // Ngăn trường hợp voucher giảm quá đà gây âm tiền
+        return discountAmount;
+    }
+
+    private void finalizeOrderAndPayment(
+            Order order,
+            PaymentMethod paymentMethod,
+            BigDecimal totalAmount,
+            BigDecimal shippingFee,
+            BigDecimal discountAmount) {
+        BigDecimal finalAmount =
+                totalAmount.subtract(discountAmount).add(shippingFee).max(BigDecimal.ZERO);
 
         order.setTotalAmount(totalAmount);
         order.setDiscountAmount(discountAmount);
-        order.setShippingFee(realShippingFee);
+        order.setShippingFee(shippingFee);
         order.setFinalAmount(finalAmount);
 
         Payment payment = Payment.builder()
                 .order(order)
-                .method(request.getPaymentMethod())
-                .amount(finalAmount) // Số tiền thanh toán thực tế
+                .method(paymentMethod)
+                .amount(finalAmount)
                 .status(PaymentStatus.PENDING)
                 .build();
+
         order.getPayments().add(payment);
-
-        return orderMapper.toResponse(orderRepository.save(order));
-    }
-
-    @Transactional
-    public void cancelOrderByUser(Integer userId, String orderCode, String cancelReason) {
-        Order order = orderRepository.findByCode(orderCode)
-                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy đơn hàng!"));
-
-        if (order.getUser() == null || !order.getUser().getId().equals(userId)) {
-            throw new IllegalStateException("Bạn không có quyền thao tác!");
-        }
-        if (order.getOrderStatus() != OrderStatus.PENDING) {
-            throw new IllegalStateException("Chỉ được hủy khi đơn hàng đang chờ xác nhận.");
-        }
-        if (cancelReason == null || cancelReason.trim().isEmpty()) {
-            throw new IllegalArgumentException("Vui lòng nhập lý do hủy!");
-        }
-
-        order.setOrderStatus(OrderStatus.CANCELLED);
-        order.setCancelReason("Khách hàng tự hủy: " + cancelReason);
-        orderRepository.save(order);
-    }
-
-    // Trong OrderService.java
-    @Transactional
-    public void cancelOrderByAdmin(String code, String reason) {
-        Order order = orderRepository.findByCode(code)
-                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy đơn hàng!"));
-
-        if (!order.getOrderStatus().equals(OrderStatus.PENDING) && !order.getOrderStatus().equals(OrderStatus.CONFIRMED)) {
-            throw new IllegalStateException("Chỉ có thể hủy đơn hàng khi đang chờ xác nhận hoặc chờ lấy hàng!");
-        }
-
-        order.setOrderStatus(OrderStatus.CANCELLED);
-        order.setCancelReason(reason);
-        // (Có thể bạn cần gọi hàm cộng lại số lượng tồn kho (Stock) vào đây)
-
-        orderRepository.save(order);
-    }
-
-
-    // ============================================================================
-    // PHẦN 1: THAO TÁC CỦA ADMIN (MANUAL ACTIONS)
-    // ============================================================================
-
-    /**
-     * Bước 1: Admin Xác nhận đơn hàng
-     */
-    @Transactional
-    public OrderResponse confirmOrder(Integer orderId) {
-        Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy đơn hàng!"));
-
-        if (order.getOrderStatus() != OrderStatus.PENDING) {
-            throw new IllegalStateException("Chỉ có thể xác nhận đơn hàng đang ở trạng thái Chờ xác nhận!");
-        }
-
-        order.setOrderStatus(OrderStatus.CONFIRMED);
-        return orderMapper.toResponse(orderRepository.save(order));
-    }
-
-    /**
-     * Bước 2: Admin Đóng gói & Bắn đơn sang Goship
-     * (Thực tế hàm này sẽ gọi API của Goship để tạo đơn, lấy Tracking Number về)
-     */
-    /**
-     * Bước 2: Admin Đóng gói & Bắn đơn sang Goship
-     */
-    @Transactional(rollbackFor = Exception.class)
-    public OrderResponse packAndReadyToShip(Integer orderId, PackOrderRequest request) {
-
-        // 1. TÌM ĐƠN HÀNG VÀ KIỂM TRA
-        Order order = orderRepository.findById(orderId)
-                .orElseThrow(() -> new IllegalArgumentException("Không tìm thấy đơn hàng!"));
-
-        if (order.getOrderStatus() != OrderStatus.CONFIRMED) {
-            throw new IllegalStateException("Đơn hàng phải ở trạng thái ĐÃ XÁC NHẬN mới được đóng gói!");
-        }
-
-        // 2. XỬ LÝ SERIAL (TỐI ƯU HIỆU NĂNG - BATCH UPDATE)
-        Map<Integer, List<String>> scannedSerialsMap = request.getSerials();
-        List<ProductSerial> serialsToUpdate = new ArrayList<>();
-
-        for (OrderItem item : order.getOrderItems()) {
-            if (item.getProductVariant() == null) {
-                throw new IllegalStateException("Sản phẩm [" + item.getProductName() + "] không còn trong kho!");
-            }
-
-            Integer variantId = item.getProductVariant().getId();
-            List<String> providedSerials = (scannedSerialsMap != null) ? scannedSerialsMap.get(variantId) : null;
-
-            // Xử lý cờ isSerialRequired lấy từ Variant
-            if (item.getProductVariant().getIsSerialRequired()) {
-                if (providedSerials == null || providedSerials.size() != item.getQuantity()) {
-                    throw new IllegalArgumentException("Vui lòng quét đúng " + item.getQuantity() + " mã Serial cho " + item.getProductName());
-                }
-            } else if (providedSerials != null && !providedSerials.isEmpty()) {
-                throw new IllegalArgumentException("Sản phẩm [" + item.getProductName() + "] không quản lý bằng Serial!");
-            }
-
-            if (providedSerials != null && !providedSerials.isEmpty()) {
-                for (String serialNumber : providedSerials) {
-                    ProductSerial ps = serialRepository.findBySerialNumber(serialNumber)
-                            .orElseThrow(() -> new IllegalArgumentException("Mã Serial không tồn tại: " + serialNumber));
-
-                    if (!ps.getStatus().equals(SerialStatus.AVAILABLE)) {
-                        throw new IllegalStateException("Mã Serial [" + serialNumber + "] không khả dụng!");
-                    }
-                    if (!ps.getProductVariantId().equals(variantId)) {
-                        throw new IllegalStateException("Mã Serial [" + serialNumber + "] không khớp với sản phẩm!");
-                    }
-
-                    ps.setStatus(SerialStatus.SOLD);
-                    ps.setOrderId(order.getId());
-                    serialsToUpdate.add(ps);
-                }
-            }
-        }
-
-        if (!serialsToUpdate.isEmpty()) {
-            serialRepository.saveAll(serialsToUpdate);
-        }
-
-        // 3. CHUẨN BỊ DATA GOSHIP
-        Map<String, Object> shipmentData = new HashMap<>();
-        shipmentData.put("rate_id", order.getGoshipShipmentId());
-        shipmentData.put("name", order.getCustomerName());
-        shipmentData.put("phone", order.getCustomerPhone());
-        shipmentData.put("address_detail", order.getShippingAddress());
-        shipmentData.put("city", order.getShippingCityCode());
-        shipmentData.put("district", order.getShippingDistrictCode());
-        shipmentData.put("ward", order.getShippingWardCode());
-
-        boolean isAlreadyPaid = order.getPayments().stream()
-                .anyMatch(p -> p.getStatus() == PaymentStatus.COMPLETED);
-        shipmentData.put("cod", isAlreadyPaid ? 0 : order.getFinalAmount().intValue());
-        shipmentData.put("amount", order.getFinalAmount().intValue());
-
-        // =====================================================================
-        // 4. GỌI API GOSHIP & XỬ LÝ ĐỒNG BỘ DỮ LIỆU
-        // =====================================================================
-        Map<String, Object> goshipResponse;
-        try {
-            goshipResponse = goshipService.createShipment(shipmentData);
-            log.info("Goship Response: {}", goshipResponse);
-        } catch (Exception e) {
-            throw new RuntimeException("Lỗi kết nối hoặc API Goship từ chối: " + e.getMessage());
-        }
-
-        // Kiểm tra trạng thái thành công trực tiếp từ ngoài cùng
-        if (goshipResponse == null || !"success".equals(goshipResponse.get("status"))) {
-            throw new RuntimeException("API Goship trả về lỗi! Data: " + goshipResponse);
-        }
-
-        // Lấy ID vận đơn nội bộ của Goship (GS83JEMBVL)
-        String newShipmentId = String.valueOf(goshipResponse.get("id"));
-
-        // Xử lý thông minh Tracking Number (Chống chết code khi hãng trả về chữ "NULL" hoặc null)
-        Object trackingObj = goshipResponse.get("tracking_number");
-        String trackingNumber;
-
-        if (trackingObj != null && !"NULL".equalsIgnoreCase(String.valueOf(trackingObj).trim()) && !String.valueOf(trackingObj).trim().isEmpty()) {
-            trackingNumber = String.valueOf(trackingObj); // Lấy mã của GHTK/GHN nếu có
-        } else {
-            trackingNumber = newShipmentId; // Nếu hãng chưa cấp mã kịp, lấy tạm mã Goship làm Tracking
-        }
-
-        // 5. CHỐT TRẠNG THÁI ĐƠN HÀNG
-        order.setOrderStatus(OrderStatus.READY_TO_SHIP);
-        order.setTrackingNumber(trackingNumber);
-        order.setGoshipShipmentId(newShipmentId);
-
-        // Bắt lỗi khi DB chết sau khi Goship đã tạo đơn thành công
-        try {
-            Order savedOrder = orderRepository.save(order);
-            return orderMapper.toResponse(savedOrder);
-        } catch (DataAccessException e) {
-            // BƯỚC CỨU CÁNH: Rollback DB và Hủy đơn rác bên Goship
-            log.error("Lỗi lưu DB, đang gọi Goship để hủy đơn rác có ID: " + newShipmentId);
-            goshipService.cancelShipment(newShipmentId);
-            throw new RuntimeException("Lỗi lưu DB, đã rollback dữ liệu và hủy đơn trên Goship!");
-        }
-    }
-
-
-    // ============================================================================
-    // PHẦN 2: THAO TÁC TỰ ĐỘNG CỦA HỆ THỐNG (WEBHOOK TỪ GOSHIP)
-    // ============================================================================
-
-    /**
-     * Hàm này được gọi bởi Controller hứng Webhook của Goship.
-     * Khi bưu tá thao tác trên App, Goship sẽ bắn mã trạng thái (904, 905...) về hàm này.
-     */
-    @Transactional
-    public void handleGoshipWebhook(GoshipWebhookRequest request) {
-
-        // ==========================================
-        // 1. TÌM ĐƠN HÀNG BẰNG ORDER CODE (GIẢ LẬP KEY)
-        // ==========================================
-        Order order = orderRepository.findByCode(request.getOrderCode())
-                .orElseThrow(() -> new IllegalArgumentException(
-                        "Không tìm thấy đơn hàng với code: " + request.getOrderCode()));
-
-        // ==========================================
-        // 2. CẬP NHẬT TRACKING NUMBER (NẾU CÓ)
-        // ==========================================
-        if (StringUtils.hasText(request.getTrackingNumber()) &&
-                !request.getTrackingNumber().equals(order.getTrackingNumber())) {
-            order.setTrackingNumber(request.getTrackingNumber());
-        }
-
-        // ==========================================
-        // 3. CHẶN WEBHOOK TRÙNG (TRÁNH DOUBLE UPDATE)
-        // ==========================================
-        OrderStatus currentStatus = order.getOrderStatus();
-
-        if (currentStatus == OrderStatus.COMPLETED ||
-                currentStatus == OrderStatus.CANCELLED ||
-                currentStatus == OrderStatus.RETURNED) {
-
-            log.warn("Đơn {} đã chốt trạng thái {}, bỏ qua webhook {}",
-                    order.getCode(), currentStatus,request.getGoshipStatusCode());
-            return;
-        }
-
-        // ==========================================
-        // 4. MAP TRẠNG THÁI GOSHIP
-        // ==========================================
-        switch (request.getGoshipStatusCode()) {
-
-            case 902: case 903: case 904: case 916: case 918: case 919:
-                order.setOrderStatus(OrderStatus.SHIPPING);
-                break;
-
-            case 905: // giao thành công
-                order.setOrderStatus(OrderStatus.DELIVERED);
-                break;
-
-            case 906: case 907: // thất bại / chuyển hoàn
-                String oldNote = StringUtils.hasText(order.getNote())
-                        ? order.getNote() + " | "
-                        : "";
-                order.setNote(oldNote + "[Goship]: " + request.getNote());
-                break;
-
-            case 908: // hoàn về kho
-                order.setOrderStatus(OrderStatus.RETURNED);
-                order.setCancelReason("Hoàn hàng: " +  request.getNote());
-                restoreStockForOrder(order);
-                break;
-
-            case 913: // đối soát xong
-                order.setOrderStatus(OrderStatus.COMPLETED);
-                break;
-
-            case 914: // hủy vận chuyển
-                order.setOrderStatus(OrderStatus.CANCELLED);
-                order.setCancelReason("Vận chuyển hủy: " +  request.getNote());
-                restoreStockForOrder(order);
-                break;
-
-            default:
-                log.info("Chưa xử lý status Goship: {}", request.getGoshipStatusCode());
-                break;
-        }
-
-        orderRepository.save(order);
-    }
-
-    // ==========================================
-    // HÀM PHỤ TRỢ: HOÀN LẠI TỒN KHO (Chạy cực mượt)
-    // ==========================================
-    private void restoreStockForOrder(Order order) {
-        log.info("🔄 Tiến hành hoàn lại tồn kho cho đơn hàng: {}", order.getCode());
-
-        for (OrderItem item : order.getOrderItems()) {
-            ProductVariant variant = item.getProductVariant();
-            if (variant != null) {
-                // Cộng lại số lượng khách đã đặt vào trong kho
-                int newStock = variant.getStockQuantity() + item.getQuantity();
-                variant.setStockQuantity(newStock);
-
-                // Lưu lại vào DB
-                variantRepository.save(variant);
-            }
-        }
-    }
-
-
-    //Lấy danh sách đơn hàng để in hóa đơn
-    @Transactional(readOnly = true)
-    public List<OrderResponse> getOrdersForPrint(List<String> orderCodes) {
-        List<Order> orders = orderRepository.findByCodeIn(orderCodes);
-        if (orders.isEmpty()) {
-            throw new IllegalArgumentException("Không tìm thấy đơn hàng nào để in!");
-        }
-        return orders.stream()
-                .map(orderMapper::toResponse)
-                .collect(Collectors.toList());
     }
 }
